feat: add repairer login
